--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             с 12:00 до 22:00
                         </div>
                         <div class="cta__address">
-                            Место проведения: <b>Коминтерна, 95</b>
+                            Место проведения: <b>г. Тверь, ул. Коминтерна, 95</b>
                         </div>
                     </div>
                 </div>
@@ -120,7 +120,7 @@
                 </div>
             </div>
             <div class="row info__bottom">
-                <div class="col-lg-7 offset-lg-5 col-sm-6 offset-sm-6 col-12">
+                <div class="col-lg-7 offset-lg-4 col-sm-6 offset-sm-6 col-12">
                     <div class="info__title info__title--orange">Специальный гость:</div>
                     <div class="info__list-item my-3"><b>Гастрономический эксперт, почетный член национальной гильдии шеф-поваров России, телеведущая Ника Ганич</b></div>
                     <ul class="info__list mb-4">
@@ -128,7 +128,30 @@
                         <li class="info__list-item">Приготовит "Тверской холодник" по фирменному рецепту и угостит всех</li>
                     </ul>
                 </div>
-                <img class="info__bottom-img" src="img/bg_section3.png" alt="spec_guest">
+                <!-- <img class="info__bottom-img" src="img/bg_section3.png" alt="spec_guest"> -->
+                <img class="info__bottom-img--2" src="img/gues.png" alt="spec_guest">
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <div class="info__card">
+                        <div class="info__card-title">Розыгрыш призов по картам МАКЛАРИН</div>
+                        <div class="info__card-pretitle">Всех наших постоянных покупателей - владельцев бонусных карт МАКЛАРИН, ждёт розыгрыш крутых призов от холдинга!</div>
+                        <img src="img/card.png" class="info__card-img" alt="card">
+                        <ul class="info__card-list">
+                            <li>Сертификаты на отдых в Детском лагере (лето 2022 г)</li>
+                            <li>Сертификаты в клинику «Афанасий»</li>
+                            <li>Годовой запас пенного, воды или молочной продукции</li>
+                            <li>Профессиональные графические планшеты</li>
+                            <li>Конструкторы «Ферма Макларин»</li>
+                            <li>10 бесплатных доставок из интернет-бутика «Макларин»</li>
+                            <li>10 бесплатных доставок пиццы «Афанасий»</li>
+                        </ul>
+                        <div class="info__card-info">
+                            Обязательно возьмите бонусную карту с собой! <br>
+                            А если у вас ее ещё нет - оформите бесплатно в любом экобутике.
+                        </div>
+                    </ш>
+                </div>
             </div>
         </div>
     </section>
@@ -151,7 +174,6 @@
                     <img src="img/bi2_logo.png" alt="bi2_logo" class="bi2__logo">
                     <a target="_blank" href="#"><img src="img/youtube.jpg" alt="youtube" class="bi2__youtube"></a>
                     <div class="bi2__free text-white">Бесплатный концерт</div> <br>
-                    <div class="bi2__vip text-white js-modal">Получить VIP - билет</div>
                 </div>
             </div>
         </div>
@@ -161,8 +183,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 text-center">
-                    <div class="vip__title mb-3 mb-lg-4">Хочешь получить <span>VIP</span> билет?</div>
-                    <div class="vip__desc mb-3 mb-lg-5">Выполни условия:</div>
+                    <div class="vip__title mb-3">Получи беслатный билет на концерт БИ-2</div>
+                    <div class="vip__desc mb-3">Учавствуй в конкурсе:</div>
+                    <div class="vip__pretitle mb-3 mb-lg-5">1 ТУР: <b>26 июля - 9 августа</b></div>
                 </div>
             </div>
             <div class="row">
@@ -170,50 +193,95 @@
                     <div class="vip__row vip--1 mb-3 mb-sm-4">
                         <img src="img/larin--small.png" class="mb-3 mb-md-0" alt="MLarin">
                         <div class="vip__text-wrap mb-3 mb-md-0">
-                            <div class="vip__text">Подпишись на М. В. Ларина в ВКонтакте или Инстаграм</div>
-                            <a href="https://vk.com/maclarin" target="_blank" class="vip__sub">Подписаться</a>
+                            <div class="vip__text">Подпишись на страницу<br>Максима Ларина</div>
                         </div>
-                        <a target="_blank" href="https://vk.com/maclarin" class="vip__qr">
-                            <img src="img/vk_qr.png" alt="vk">
-                        </a>
-                        <a target="_blank" href="https://www.instagram.com/larin_afanasy" class="vip__qr">
-                            <img src="img/inst_qr.png" alt="vk">
-                        </a>
+                        <div class="vip__codes">
+                            <a target="_blank" href="https://vk.com/maclarin" class="vip__qr">
+                                <img src="img/vk_qr.png" alt="vk">
+                            </a>
+                            <a target="_blank" href="https://www.instagram.com/larin_afanasy" class="vip__qr">
+                                <img src="img/inst_qr.png" alt="vk">
+                            </a>
+                        </div>
                     </div>
                     <div class="vip__row vip--2">
-                        <div class="vip__text">Сделай репост записи о фестивале<br> ВКонтакте или сториз в Instagram</div>
+                        <div class="vip__text pr-md-5 pr-sm-3">
+                            <span>Расскажи о конкурсе друзьям, нажав кнопку «Поделиться ВКонтакте» или выложи в сториз публикацию в Instagram</span>
+                            <div class="vip__soc">
+                                <a href="#" class="mr-md-3 mb-2 mb-md-0"><img src="img/vkbutton.png" alt="share vk"></a>
+                                <a href="#"><img src="img/instbutton.png" alt="share inst"></a>
+                            </div>
+                        </div>
                         <img class="vip__share" src="img/screen_inst.png" alt="vk">
                     </div>
-                    <div class="vip__btn vip--3 mb-3 mb-sm-5 js-modal">
-                        Получить VIP билет
+                    <div class="vip__btn mb-4 mb-sm-5 js-modal">
+                        Принять участие в конкурсе
                     </div>
+                </div>
+                <div class="col-12 vip__info mb-4">
+                    Победителей определим <b>9 августа</b> генератором случайных чисел. <br>
+                    * Каждому участнику мы пришлем смс-оповещение о его результате. <br><br>
+                    
+                    20 000 счастливчиков <b>проходят во второй тур:</b> получают фирменную футболку фестиваля и шанс выиграть бесплатный билет на концерт БИ-2! <br><br>
+
+                    Информацию о втором туре мы опубликуем на сайте и в соцсетях холдинга «Афанасий», а также на личной странице М.В. Ларина. <br>
+                    Следите за нашими новостями!
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="section--transfer section">
-        <div class="container">
-            <div class="row">
+    <section class="section--gift section">
+        <div class="container position-relative">
+            <div class="row overflow-hidden">
                 <div class="col-12">
-                    <div class="transfer__title">Бесплатный трансфер из Тверской области</div>
-                    <div class="transfer__text">
-                        Не на чем добраться ? БЕсплатно привезем вас на фестиваль! <br><br>
-                        Команда МАКЛАРИН устраивает тур по городам Тверской област! Смотрите расписание, ищите ваш город в списке и приходите на шоу-программу, чтобы получить бесплатный билет на трансфер до Твери на фестиваль МАКЛАРИН! 
+                    <img src="img/gift.png" alt="gift" class="gift__img">
+                </div>
+                <div class="col-12">
+                    <div class="gift__title text-center">
+                        Как получить призы
                     </div>
-                    <div class="transfer__table-wrap">
-                        <table class="transfer__table">
-                            <tr>
-                                <th>Город</th>
-                                <th>Время</th>
-                                <th>Адрес</th>
-                            </tr>
-                            <tr>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                            </tr>
-                        </table>
+                </div>
+                <div class="col-sm-9 col-8">
+                    <div class="gift__text">
+                        Забрать билет и футболку фестиваля можно любым удобным способом: <br><br>
+
+                        <b>В Твери:</b><br>
+                        в экобутике «Афанасий» на Коминтерна, 56 (напротив завода) <br><br>
+
+                        <b>В Тверской области:</b><br>
+                        Команда МАКЛАРИН устроит тур по 10 городам региона, в котором раздаст призы:
+
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-3 col-4 px-sm-3 px-2">
+                    <ul class="gift__citys">
+                        <li>Вышний Волочек</li>
+                        <li>Торжок</li>
+                        <li>Кимры</li>
+                    </ul>
+                </div>
+                <div class="col-sm-3 col-4 px-sm-3 px-2">
+                    <ul class="gift__citys">
+                        <li>Осташков</li>
+                        <li>Бежецк</li>
+                        <li>Конаково</li>
+                    </ul>
+                </div>
+                <div class="col-sm-3 col-4 px-sm-3 px-2">
+                    <ul class="gift__citys">
+                        <li>Лихославль</li>
+                        <li>Удомля</li>
+                        <li>Дубна</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row mb-3">
+                <div class="col-10 offset-1 text-center">
+                    <div class="gift__info">
+                        Даты и время сообщим позже на наших страницах в соцсетях - подписывайтесь и следите за новостями!  
                     </div>
                 </div>
             </div>
@@ -248,37 +316,20 @@
         <div class="popup__close link close"></div>
         <div class="popup__wrapper">
             <div class="popup__title">
-                Получить VIP билет
+                Принять участие в конкурсе
             </div>
             <form method="POST" class="popup__form" id="ajax_form">
                 <input type="hidden" name="city" value="Пусто">
                 <input name="name" type="text" placeholder="Ф.И.О." required>
                 <input name="phone" type="text" placeholder="Телефон" required>
-                <div class="select">
-                    <div class="selectWrapper">
-                    <div class="selectCustom js-selectCustom">
-                        <div class="selectCustom-trigger">Выберите город</div>
-                        <div class="selectCustom-options">
-                        <div class="selectCustom-option" data-value="Tv">Тверь</div>
-                        <div class="selectCustom-option" data-value="Tor">Торжок</div>
-                        <div class="selectCustom-option" data-value="Lih">Лихославль</div>
-                        </div>
-                    </div>
-                    </div>
-                </div>
+                <input name="email" type="text" placeholder="Ваш e-mail" required>
+                <input name="city" type="text" placeholder="Ваш город" required>
                 <div class="checkbox">
                     <input class="custom-checkbox" type="checkbox" id="color-1" name="color-1" value="indigo" required>
                     <label for="color-1">Я согласен с <a target="_blank" href="http://www.it-lex.ru/usloviya_ispolzovaniya_servisa/publichnaya_oferta/"> условиями оферты</a></label>
                 </div>
                 <input type="submit" value="Получить билет!">
             </form>
-            <div class="popup__text">
-                Приходите в экобутик по адресу:
-            </div>
-            <div class="popup__address">
-                УЛ. ВОССТАНИЯ ДЕСЕПТИКОНОВ,6 <br>
-                13:00
-            </div>
         </div>
     </div>
     <div id="mask"></div>
