--- a/index.html
+++ b/index.html
@@ -5,14 +5,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+
     <link rel="stylesheet" href="css/main.min.css">
-    <title>День Рождения холдинга Афанасий</title>
+    <title>Фестиваль "МакЛарин за Родину"</title>
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/jquery.fancybox.min.css">
+
+    <script type="text/javascript">!function(){var t=document.createElement("script");t.type="text/javascript",t.async=!0,t.src="https://vk.com/js/api/openapi.js?169",t.onload=function(){VK.Retargeting.Init("VK-RTRG-1029143-fXc1q"),VK.Retargeting.Hit()},document.head.appendChild(t)}();</script><noscript><img src="https://vk.com/rtrg?p=VK-RTRG-1029143-fXc1q" style="position:fixed; left:-999px;" alt=""/></noscript>
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript" >
+        (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+        m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+        (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+    
+        ym(83264539, "init", {
+            clickmap:true,
+            trackLinks:true,
+            accurateTrackBounce:true,
+            webvisor:true
+        });
+    </script>
+    <noscript><div><img src="https://mc.yandex.ru/watch/83264539" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    <!-- /Yandex.Metrika counter -->
+    <!-- Facebook Pixel Code -->
+    <script>
+        !function(f,b,e,v,n,t,s)
+        {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+        n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+        if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+        n.queue=[];t=b.createElement(e);t.async=!0;
+        t.src=v;s=b.getElementsByTagName(e)[0];
+        s.parentNode.insertBefore(t,s)}(window, document,'script',
+        'https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', '159702952806946');
+        fbq('track', 'PageView');
+    </script>
+    <noscript><img height="1" width="1" style="display:none"
+    src="https://www.facebook.com/tr?id=159702952806946&ev=PageView&noscript=1"
+    /></noscript>
+    <!-- End Facebook Pixel Code -->
 </head>
 <body>
 
@@ -22,7 +60,7 @@
                 <div class="col-12">
                     <div class="d-flex justify-content-end">
                         <div class="header__phone">
-                            Есть вопросы? звони: <a href="tel: +79991507101">+7(999)150-71-01</a>
+                            Есть вопросы? звони: <a href="tel: +79991507101">+7 (999) 150-71-01</a>
                         </div>
                     </div>
                 </div>
@@ -39,9 +77,7 @@
                 <div class="col-lg-10 col-12 mt-4">
                     <div class="first__wrapper">
                         <div>
-                            <div class="first__text">Друзья, в честь своего юбилея я устраиваю семейный гастрономический фестиваль МАКЛАРИН! <br><br>
-                            Мы в холдинге «Афанасий» взяли на себя важную миссию - обеспечить здоровое будущее Родины. Чтобы жители нашего региона были уверены в качестве того, что едят они и их дети, мы развиваем производство натуральных экологически чистых продуктов МАКЛАРИН. <br><br>
-                            Приглашаю всех, кто, как и мы - за здоровую Родину, отметить мой юбилей вместе!</div>
+                            <div class="first__text">В этом году у меня юбилей - 50 лет, а холдингу «Афанасий» исполнилось 45 лет! В честь этого я устраиваю праздничный фестиваль МАКЛАРИН за РОДИНУ и приглашаю всех своих друзей отметить эти события вместе!</div>
                             <div class="first__signature mt-5 mt-sm-0">
                                 <span>Руководитель Холдинга «‎Афанасий», <br> Максим Ларин</span>
                                 <img class="mt-1 mt-sm-0" src="img/signature.png" alt="signature">
@@ -54,7 +90,7 @@
         </div>
     </section>
 
-    <section class="section section--green">
+    <section class="section section--green" id="date">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -63,7 +99,7 @@
                             29 августа 2021 г
                         </div>
                         <div class="cta__time">
-                            с 12:00 до 22:00
+                            с 17:00 до 22:00
                         </div>
                         <div class="cta__address">
                             Место проведения: <b>г. Тверь, ул. Коминтерна, 95</b>
@@ -107,7 +143,16 @@
                     <div class="swiper-container">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
-                                <a data-fancybox="gallery" href="img/slide.jpg"><img src="img/slide.jpg" alt="slide"></a>
+                                <a data-fancybox="gallery" href="img/s1.jpeg"><img src="img/s1.jpeg" alt="slide"></a>
+                            </div>
+                            <div class="swiper-slide">
+                                <a data-fancybox="gallery" href="img/s2.jpeg"><img src="img/s2.jpeg" alt="slide"></a>
+                            </div>
+                            <div class="swiper-slide">
+                                <a data-fancybox="gallery" href="img/s3.jpeg"><img src="img/s3.jpeg" alt="slide"></a>
+                            </div>
+                            <div class="swiper-slide">
+                                <a data-fancybox="gallery" href="img/s4.jpeg"><img src="img/s4.jpeg" alt="slide"></a>
                             </div>
                         </div>
                         <div class="swiper-button-prev"></div>
@@ -156,11 +201,11 @@
         </div>
     </section>
 
-    <section class="section section--bi2 overflow-hidden">
+    <section class="section section--bi2 overflow-hidden" id="bi2">
         <div class="container">
             <div class="row bi2__wrap">
                 <div class="col-lg-6 col-12 order-2 order-lg-1">
-                    <div class="info__title text-white">Дневная программа:</div>
+                    <div class="info__title text-white">Вечерняя программа:</div>
                     <ul class="info__list text-white mb-0">
                         <li class="info__list-item text-white">Праздничная шоу-программа</li>
                         <li class="info__list-item text-white">Выступление тверских кавер-групп</li>
@@ -172,20 +217,28 @@
                     <div class="bi2__spec text-white">Специальные гости:</div>
                     <div class="bi2__group text-white">ГРУППА</div>
                     <img src="img/bi2_logo.png" alt="bi2_logo" class="bi2__logo">
-                    <a target="_blank" href="#"><img src="img/youtube.jpg" alt="youtube" class="bi2__youtube"></a>
+                    <!-- <a target="_blank" href="#"><img src="img/youtube.jpg" alt="youtube" class="bi2__youtube"></a> -->
+                    <a target="_blank" href="#"><iframe width="421" height="236" class="bi2__youtube" src="https://www.youtube.com/embed/UFuIKNMJcJ0?autoplay=1&loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></a>
                     <div class="bi2__free text-white">Бесплатный концерт</div> <br>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="section section--vip">
+    <section class="section section--vip" id="vip">
         <div class="container">
             <div class="row">
                 <div class="col-12 text-center">
-                    <div class="vip__title mb-3">Получи беслатный билет на концерт БИ-2</div>
-                    <div class="vip__desc mb-3">Учавствуй в конкурсе:</div>
-                    <div class="vip__pretitle mb-3 mb-lg-5">1 ТУР: <b>26 июля - 9 августа</b></div>
+                    <div class="vip__title mb-3">Получи карту МАКЛАРИН БИ-2 для прохода на фестиваль</div>
+                    <div class="vip__desc mb-3">Участвуй в конкурсе:</div>
+                    <div class="vip__wrap mb-lg-5 mb-3">
+                        <div class="vip__pretitle">1 ТУР: <b> 26 июля - 9 августа</b></div>
+                        <div class="vip__counter">
+                            <div class="vip__counter-text">Уже участвуют:</div>
+                            <!-- <div class="vip__counter-number">10000</div> -->
+                            <div class="vip__counter-number"><?= htmlentities(file_get_contents("count.txt")) ?></div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="row">
@@ -206,25 +259,25 @@
                     </div>
                     <div class="vip__row vip--2">
                         <div class="vip__text pr-md-5 pr-sm-3">
-                            <span>Расскажи о конкурсе друзьям, нажав кнопку «Поделиться ВКонтакте» или выложи в сториз публикацию в Instagram</span>
+                            <span>Расскажи о конкурсе друзьям, нажав кнопку «Поделиться ВКонтакте», или выложи в сториз публикацию в Instagram</span>
                             <div class="vip__soc">
-                                <a href="#" class="mr-md-3 mb-2 mb-md-0"><img src="img/vkbutton.png" alt="share vk"></a>
-                                <a href="#"><img src="img/instbutton.png" alt="share inst"></a>
+                                <a href="https://vk.com/wall-27947528_14415" class="mr-md-3 mb-2 mb-md-0" target="_blank"><img src="img/vkbutton.png" alt="share vk"></a>
+                                <a href="https://www.instagram.com/p/CRyJLPYjnN0/" target="_blank"><img src="img/instbutton.png" alt="share inst"></a>
                             </div>
                         </div>
                         <img class="vip__share" src="img/screen_inst.png" alt="vk">
                     </div>
-                    <div class="vip__btn mb-4 mb-sm-5 js-modal">
-                        Принять участие в конкурсе
+                    <div class="vip__btn vip--3 mb-4 mb-sm-5 js-modal">
+                        Зарегистрироваться в конкурсе
                     </div>
                 </div>
                 <div class="col-12 vip__info mb-4">
                     Победителей определим <b>9 августа</b> генератором случайных чисел. <br>
-                    * Каждому участнику мы пришлем смс-оповещение о его результате. <br><br>
+                    Каждому участнику мы пришлем смс-оповещение о его результате. <br><br>
                     
-                    20 000 счастливчиков <b>проходят во второй тур:</b> получают фирменную футболку фестиваля и шанс выиграть бесплатный билет на концерт БИ-2! <br><br>
+                    20 000 счастливчиков <b>проходят во второй тур:</b> получают фирменную футболку фестиваля и шанс выиграть билет на фестиваль - карту МАКЛАРИН БИ-2 <br><br>
 
-                    Информацию о втором туре мы опубликуем на сайте и в соцсетях холдинга «Афанасий», а также на личной странице М.В. Ларина. <br>
+                    Информацию о втором туре мы опубликуем на сайте и в соцсетях холдинга «Афанасий», а также на личной странице М.В. Ларина.<br>
                     Следите за нашими новостями!
                 </div>
             </div>
@@ -244,14 +297,13 @@
                 </div>
                 <div class="col-sm-9 col-8">
                     <div class="gift__text">
-                        Забрать билет и футболку фестиваля можно любым удобным способом: <br><br>
+                        Забрать  карту и футболку фестиваля можно любым удобным способом: <br><br>
 
                         <b>В Твери:</b><br>
-                        в экобутике «Афанасий» на Коминтерна, 56 (напротив завода) <br><br>
+                        в экобутике «Афанасий» на Коминтерна, 56 (напротив завода)<br><br>
 
                         <b>В Тверской области:</b><br>
-                        Команда МАКЛАРИН устроит тур по 10 городам региона, в котором раздаст призы:
-
+                        Команда МАКЛАРИН устроит тур по 12 городам региона, в котором раздаст призы:
                     </div>
                 </div>
             </div>
@@ -261,6 +313,7 @@
                         <li>Вышний Волочек</li>
                         <li>Торжок</li>
                         <li>Кимры</li>
+                        <li>Весьегонск</li>
                     </ul>
                 </div>
                 <div class="col-sm-3 col-4 px-sm-3 px-2">
@@ -268,13 +321,15 @@
                         <li>Осташков</li>
                         <li>Бежецк</li>
                         <li>Конаково</li>
+                        <li>Зубцов</li>
                     </ul>
                 </div>
                 <div class="col-sm-3 col-4 px-sm-3 px-2">
                     <ul class="gift__citys">
                         <li>Лихославль</li>
                         <li>Удомля</li>
-                        <li>Дубна</li>
+                        <li>Ржев</li>
+                        <li>Старица</li>
                     </ul>
                 </div>
             </div>
@@ -288,7 +343,7 @@
         </div>
     </section>
 
-    <footer class="footer section section--green">
+    <footer class="footer section section--green pb-3">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 offset-lg-1 col-12">
@@ -300,13 +355,14 @@
                             Позвони или напиши нам в социальные сети:
                         </div>
                         <div class="footer__address mt-3 mt-lg-4">
-                            <a class="footer__phone" href="tel: +7(999)150-71-01">+7(999)150-71-01</a>
+                            <a class="footer__phone" href="tel: +79991507101">+7 (999) 150-71-01</a>
                             <div class="footer__wrap">
                                 <a target="_blank" href="https://vk.com/afanasyholding"><img src="img/footer_vk.png" alt="vk"></a>
                                 <a target="_blank" href="https://www.instagram.com/afanasyholding/"><img src="img/footer_inst.png" alt="inst"></a>
                             </div>
                         </div>
                     </div>
+                    <a class="footer__privacy text-center text-white d-block mt-3 mt-sm-4" href="Политика обработки персональных данных.pdf" target="_blank">Политика обработки персональных данных</a>
                 </div>
             </div>
         </div>
@@ -326,9 +382,9 @@
                 <input name="city" type="text" placeholder="Ваш город" required>
                 <div class="checkbox">
                     <input class="custom-checkbox" type="checkbox" id="color-1" name="color-1" value="indigo" required>
-                    <label for="color-1">Я согласен с <a target="_blank" href="http://www.it-lex.ru/usloviya_ispolzovaniya_servisa/publichnaya_oferta/"> условиями оферты</a></label>
+                    <label for="color-1">Я даю согласие на <a target="_blank" href="Согласие на обработку персональных данных.pdf">обработку персональных данных</a></label>
                 </div>
-                <input type="submit" value="Получить билет!">
+                <input type="submit" value="Участвую!">
             </form>
         </div>
     </div>
@@ -339,6 +395,7 @@
     <script src="/js/jquery-3.6.0.min.js"></script>
     <script src="/js/jquery.inputmask.min.js"></script>
     <script src="/js/jquery.fancybox.min.js"></script>
+    <script src="/js/jquery.spincrement.min.js"></script>
     <script src="/js/main.js"></script>
 </body>
 </html>
