--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Cache-Control" content="no-cache">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -104,6 +105,30 @@
                 </div>
             </div>
             <img class="first__img" src="img/larin_top.png" alt="MLarin">
+        </div>
+    </section>
+
+    <section class="section--speak">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="speak__title">
+                        Важное сообщение от Максима Ларина
+                    </div>
+                </div>
+                <div class="col-lg-2 col-md-3 col-12 speak__left mb-3 mb-lg-0">
+                    <img src="img/mlround.png" alt="m_larin" data-fancybox="gallery1">
+                    <div>13 августа 2021</div>
+                </div>
+                <div class="col-lg-10 col-md-9 col-12 speak__text">
+                    <p>Друзья, являются ли случайности случайными? На свой юбилей я запланировал праздник и продвижение через концерт бренда МАКЛАРИН ещё при его создании. Это несколько лет назад. То, что я родился летом и мой юбилей пришелся в год выборов через 50 лет - это, думаю, с политикой не связано. БИ-2 - это моя любимая группа. Также мы ранее уже в 2000-х приглашали группу в День города, снимали недавно клип с продвижением бренда МАКЛАРИН. В договоре с БИ-2 мы сознательно зафиксировали, что концерт не политический. <br><br>
+
+                        Дискуссии под постом взбудоражили чиновников. Мои коллеги были вызваны на разговор на площадь Мира. Теперь нам очевидно, что самый надежный вариант - это успокоить чиновников, что мероприятие юбилейное, а не политическое, и может такое давление на группу не будет оказываться. В этой связи и ради того, чтобы праздник состоялся, я удаляю свой пост, который вызвал политические дискуссии.</p>
+                </div>
+                <div class="col-12 text-center">
+                    <a href="https://vk.com/wall328082409_10415" target="_blank" class="vip__btn">Перейти к публикации</a>
+                </div>
+            </div>
         </div>
     </section>
 
