--- a/index.html
+++ b/index.html
@@ -108,30 +108,6 @@
         </div>
     </section>
 
-    <section class="section--speak">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <div class="speak__title">
-                        Важное сообщение от Максима Ларина
-                    </div>
-                </div>
-                <div class="col-lg-2 col-md-3 col-12 speak__left mb-3 mb-lg-0">
-                    <img src="img/mlround.png" alt="m_larin" data-fancybox="gallery1">
-                    <div>13 августа 2021</div>
-                </div>
-                <div class="col-lg-10 col-md-9 col-12 speak__text">
-                    <p>Друзья, являются ли случайности случайными? На свой юбилей я запланировал праздник и продвижение через концерт бренда МАКЛАРИН ещё при его создании. Это несколько лет назад. То, что я родился летом и мой юбилей пришелся в год выборов через 50 лет - это, думаю, с политикой не связано. БИ-2 - это моя любимая группа. Также мы ранее уже в 2000-х приглашали группу в День города, снимали недавно клип с продвижением бренда МАКЛАРИН. В договоре с БИ-2 мы сознательно зафиксировали, что концерт не политический. <br><br>
-
-                        Дискуссии под постом взбудоражили чиновников. Мои коллеги были вызваны на разговор на площадь Мира. Теперь нам очевидно, что самый надежный вариант - это успокоить чиновников, что мероприятие юбилейное, а не политическое, и может такое давление на группу не будет оказываться. В этой связи и ради того, чтобы праздник состоялся, я удаляю свой пост, который вызвал политические дискуссии.</p>
-                </div>
-                <div class="col-12 text-center">
-                    <a href="https://vk.com/wall328082409_10415" target="_blank" class="vip__btn">Перейти к публикации</a>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <section class="section section--green" id="date">
         <div class="container">
             <div class="row">
@@ -139,9 +115,6 @@
                     <div class="cta">
                         <div class="cta__title">
                             29 августа 2021 г
-                        </div>
-                        <div class="cta__time">
-                            с 17:00 до 22:00
                         </div>
                         <div class="cta__address">
                             Место проведения: <b>г. Тверь, ул. Коминтерна, 95</b>
@@ -199,60 +172,30 @@
         </div>
     </section>
 
-    <section class="section section--vip" id="vip">
+    <section class="section section--warning">
         <div class="container">
             <div class="row">
-                <div class="col-12 text-center">
-                    <div class="vip__title mb-3">Получи карту МАКЛАРИН БИ-2 для прохода на фестиваль</div>
-                    <div class="vip__desc mb-3">Участвуй в конкурсе:</div>
-                    <div class="vip__duration mb-4">Конкурс продлен до 16 августа! Спешите принять участие!</div>
-                    <div class="vip__wrap mb-lg-5 mb-3">
-                        <div class="vip__pretitle">1 ТУР: <b> 26 июля - 16 августа</b></div>
-                        <div class="vip__counter">
-                            <div class="vip__counter-text">Уже участвуют:</div>
-                            <!-- <div class="vip__counter-number">10000</div> -->
-                            <div class="vip__counter-number"><?= htmlentities(file_get_contents("count.txt")) ?></div>
-                        </div>
+                <div class="col-12">
+                    <div class="warn__title">
+                        Внимание!
                     </div>
+                    <div class="warn__desc">
+                        Регистрация на фестиваль завершена.
+                    </div>
+                </div>
+            </div>
+            <div class="row align-items-center">
+                <div class="col-md-2 col-sm-3 text-center mb-3 mb-sm-0">
+                    <img class="warn__img" src="img/warning.png" alt="warning">
+                </div>
+                <div class="col-md-10 col-sm-9">
+                    <div class="warn__text">Если вы не успели зарегистрироваться и хотите принять участие в фестивале, оставьте заявку в резервный список гостей.
+                    В случае, если появятся свободные места, мы свяжемся с вами и пригласим для получения билета!</div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-12 text-center">
-                    <div class="vip__row vip--1 mb-3 mb-sm-4">
-                        <img src="img/larin--small.png" class="mb-3 mb-md-0" alt="MLarin">
-                        <div class="vip__text-wrap mb-3 mb-md-0">
-                            <div class="vip__text">Подпишись на страницу<br>Максима Ларина</div>
-                        </div>
-                        <div class="vip__codes">
-                            <a target="_blank" href="https://vk.com/maclarin" class="vip__qr">
-                                <img src="img/vk_qr.png" alt="vk">
-                            </a>
-                            <a target="_blank" href="https://www.instagram.com/larin_afanasy" class="vip__qr">
-                                <img src="img/inst_qr.png" alt="vk">
-                            </a>
-                        </div>
-                    </div>
-                    <div class="vip__row vip--2">
-                        <div class="vip__text pr-md-5 pr-sm-3">
-                            <span>Расскажи о конкурсе друзьям, нажав кнопку «Поделиться ВКонтакте», или выложи в сториз публикацию в Instagram</span>
-                            <div class="vip__soc">
-                                <a href="https://vk.com/wall-27947528_14415" class="mr-md-3 mb-2 mb-md-0" target="_blank"><img src="img/vkbutton.png" alt="share vk"></a>
-                                <a href="https://www.instagram.com/p/CRyJLPYjnN0/" target="_blank"><img src="img/instbutton.png" alt="share inst"></a>
-                            </div>
-                        </div>
-                        <img class="vip__share" src="img/screen_inst.png" alt="vk">
-                    </div>
-                    <div class="vip__btn vip--3 mb-4 mb-sm-5 js-modal">
-                        Зарегистрироваться в конкурсе
-                    </div>
-                </div>
-                <div class="col-12 vip__info mb-4">
-                    Победителей определим <b>16 августа</b> генератором случайных чисел. <br>
-                    * Каждому участнику мы пришлем смс-оповещение о его результате.<br><br>
-                    
-                    Все зарегистрировавшиеся получают фирменную футболку фестиваля* и участвуют в розыгрыше 6 000 билетов на фестиваль!<br>
-
-                    16 августа мы подведем итоги конкурса. Каждому участнику пришлем смс-оповещение о его результате.
+                    <div class="warn__btn vip__btn js-modal">Подать заявку</div>
                 </div>
             </div>
         </div>
@@ -261,64 +204,33 @@
     <section class="section section--step">
         <div class="container">
             <div class="row">
-                <div class="col-12 step__title mb-md-5 mb-4">Считай, что билет у тебя уже в кармане, если ты...</div>
+                <div class="col-12 step__title mb-md-5 mb-4">3 важных шага для прохода на фестиваль:</div>
                 <div class="col-sm-4 col-12">
                     <div class="step">
-                        <img src="img/step1.png" alt="step1" class="step__img">
+                        <img src="img/st1.png" alt="step1" class="step__img">
                         <div class="step__wrap">
                             <div class="step__num">01.</div>
-                            <div class="step__text">Зарегистрируешь в конкурсах своих родственников</div>
+                            <div class="step__text">Взять с собой билет - карту «МАКЛАРИН БИ-2», а также лотерейный билет, прикрепленный к ней, для участия в розыгрыше призов;</div>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-4 col-12">
                     <div class="step">
-                        <img src="img/step2.png" alt="step1" class="step__img">
+                        <img src="img/st2.png" alt="step1" class="step__img">
                         <div class="step__wrap">
                             <div class="step__num">02.</div>
-                            <div class="step__text">Каждый из них получает фирменную футболку фестиваля</div>
+                            <div class="step__text">Прийти в фирменной футболке фестиваля МАКЛАРИН за Родину</div>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-4 col-12">
                     <div class="step mb-0">
-                        <img src="img/step3.png" alt="step1" class="step__img">
+                        <img src="img/st3.png" alt="step1" class="step__img">
                         <div class="step__wrap">
                             <div class="step__num">03.</div>
-                            <div class="step__text"><b>Выигрывает каждый третий!**</b><br>
-                                Больше родных - больше шансов на победу.</div>
+                            <div class="step__text">Обязательно прийти
+                                в указанное на карте время.</div>
                         </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12">
-                    <div class="step__info">
-                        *Количество призов ограничено: 20 000 фирменных футболок фестиваля.<br><br>
-                        **Победители определяются с помощью генератора случайных чисел
-                    </div>
-                </div>
-            </div>
-            <div class="row mt-sm-5 mt-4 mb-3">
-                <div class="col-12 mb-sm-4 mb-3">
-                    <div class="ask__title">
-                        Вопрос-ответ
-                    </div>
-                </div>
-                <div class="col-12">
-                    <div class="ask">
-                        <b>1. Вопрос:</b><br>
-                        У моей бабушки нет страницы в соцсетях - она не сможет сделать репост записи о конкурсе. Но я хочу увеличить свои шансы на победу. Как быть? <br>
-
-                        <span class="ask--green">Ответ:</span> Главное, зарегистрируйте всех родственников на сайте. А к своему репосту в Вк или Instagram напишите имена всех, кто принимает участие в конкурсе от вашей семьи.<br><br>
-
-                        <b>2. Вопрос:</b><br>
-                        Если билет выиграет мой муж/сестра/дедушка, могу ли я пойти вместо него?<br>
-                        <span class="ask--green">Ответ:</span> Да, вы можете пройти по билету вашего родственника. При получении просто назовите его фамилию и номер телефона. Билет выдается на одну персону.<br><br>
-
-                        <b>3. Вопрос:</b><br>
-                        Могу ли я прийти с ребенком? Нужно ли получать на него билет?<br>
-                        <span class="ask--green">Ответ:</span> Нет, на фестивале действует возрастное ограничение 18+
                     </div>
                 </div>
             </div>
@@ -413,7 +325,7 @@
         <div class="popup__close link close"></div>
         <div class="popup__wrapper">
             <div class="popup__title">
-                Принять участие в конкурсе
+                Оставить заявку
             </div>
             <form method="POST" class="popup__form" id="ajax_form">
                 <input type="hidden" name="city" value="Пусто">
@@ -421,16 +333,16 @@
                 <input name="phone" type="text" placeholder="Телефон" required>
                 <input name="email" type="text" placeholder="Ваш e-mail" required>
                 <input name="city" type="text" placeholder="Ваш город" required>
-                <div class="popup__add" id="js-new-person--1">+ Зарегистрировать еще участника</div>
+                <!-- <div class="popup__add" id="js-new-person--1">+ Зарегистрировать еще участника</div>
                 <div class="popup__add" id="js-new-person--2">+ Зарегистрировать еще участника</div>
                 <div class="popup__add" id="js-new-person--3">+ Зарегистрировать еще участника</div>
                 <div class="popup__add" id="js-new-person--4">+ Зарегистрировать еще участника</div>
-                <div class="popup__add" id="js-new-person--5">+ Зарегистрировать еще участника</div>
+                <div class="popup__add" id="js-new-person--5">+ Зарегистрировать еще участника</div> -->
                 <div class="checkbox">
                     <input class="custom-checkbox" type="checkbox" id="color-1" name="color-1" value="indigo" required>
                     <label for="color-1">Я даю согласие на <a target="_blank" href="Согласие на обработку персональных данных.pdf">обработку персональных данных</a></label>
                 </div>
-                <input type="submit" value="Участвую!">
+                <input type="submit" value="Отправить">
             </form>
         </div>
     </div>
