--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                             <tr>
                                 <td>Конаково</td>
                                 <td>24 августа с 11:00 до 13:00</td>
-                                <td>ул. Энергетиков, 28, экобутик «Афанасий»</td>
+                                <td>Наб. реки Волги, 38, экобутик «Афанасий»</td>
                             </tr>
                             <tr>
                                 <td>Кимры</td>
@@ -393,7 +393,51 @@
 
                         На территории размещены санитайзеры для обработки рук антисептиком и при необходимости выдаются маски.</div>
                     <a href="schema_ev.pdf" target="_blank" class="def__btn def__btn--red mr-md-4 mb-2 mb-md-0 mr-2">План эвакуации</a>
-                    <button href="regl.pdf" data-fancybox class="def__btn def__btn--green">Регламент мероприятия</button>
+                    <a href="regl.pdf" target="_blank" class="def__btn def__btn--green">Регламент мероприятия</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section section--rules">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="rules__title">
+                        Правила поведения на фестивале
+                    </div>
+                </div>
+                <div class="col-12">
+                    <div class="rules">
+                        <div class="rules__item">
+                            <div class="rules__item-img"><img src="img/rule1.png" alt="rule"></div>
+                            <div class="rules__item-text">Не мусори</div>
+                        </div>
+                        <div class="rules__item">
+                            <div class="rules__item-img"><img src="img/rule2.png" alt="rule"></div>
+                            <div class="rules__item-text">Не хами и не матерись</div>
+                        </div>
+                        <div class="rules__item">
+                            <div class="rules__item-img"><img src="img/rule3.png" alt="rule"></div>
+                            <div class="rules__item-text">Следи за детьми</div>
+                        </div>
+                        <div class="rules__item rules__item--big">
+                            <div class="rules__item-img"><img src="img/rule4.png" alt="rule"></div>
+                            <div class="rules__item-text">Справляй нужду только в положенном месте</div>
+                        </div>
+                        <div class="rules__item">
+                            <div class="rules__item-img"><img src="img/rule5.png" alt="rule"></div>
+                            <div class="rules__item-text">Уважай других, будь вежлив</div>
+                        </div>
+                        <div class="rules__item">
+                            <div class="rules__item-img"><img src="img/rule6.png" alt="rule"></div>
+                            <div class="rules__item-text">Кури только в положенных местах</div>
+                        </div>
+                        <div class="rules__item">
+                            <div class="rules__item-img"><img src="img/rule7.png" alt="rule"></div>
+                            <div class="rules__item-text">Относись к имуществу бережно</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
